--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Provider Selector - 通用 AI 配置组件</title>
+  <title>AI Selector - 通用 AI 配置组件</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script>
@@ -147,8 +147,7 @@
 
       <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6 leading-tight dark:text-white text-gray-900">
         AI 配置组件，<br>
-        <span
-          class="bg-gradient-to-r from-emerald-400 via-cyan-400 to-blue-500 bg-clip-text text-transparent">
+        <span class="bg-gradient-to-r from-emerald-400 via-cyan-400 to-blue-500 bg-clip-text text-transparent">
           简单快速接入 AI
         </span>
       </h1>
@@ -158,23 +157,20 @@
       </p>
 
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-        <a href="http://localhost:5173"
+        <a href="./react/index.html"
           class="group w-full sm:w-auto px-8 py-4 rounded-xl bg-gradient-to-r from-blue-500 to-blue-600 text-white font-semibold hover:opacity-90 transition-all flex items-center justify-center gap-3">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <circle cx="12" cy="12" r="2.5" />
-            <path
-              d="M12 8.5c3.5 0 6.5 1.5 6.5 3.5s-3 3.5-6.5 3.5S5.5 14 5.5 12 8.5 8.5 12 8.5m0-1c-4.25 0-7.5 2-7.5 4.5s3.25 4.5 7.5 4.5 7.5-2 7.5-4.5-3.25-4.5-7.5-4.5z" />
-            <ellipse cx="12" cy="12" rx="2" ry="6" transform="rotate(60 12 12)" stroke="currentColor" stroke-width="1"
-              fill="none" />
-            <ellipse cx="12" cy="12" rx="2" ry="6" transform="rotate(-60 12 12)" stroke="currentColor" stroke-width="1"
-              fill="none" />
+          <svg class="w-6 h-6 flex-shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <circle cx="12" cy="12" r="2" fill="currentColor" stroke="none" />
+            <ellipse cx="12" cy="12" rx="10" ry="4.5" />
+            <ellipse cx="12" cy="12" rx="10" ry="4.5" transform="rotate(60 12 12)" />
+            <ellipse cx="12" cy="12" rx="10" ry="4.5" transform="rotate(120 12 12)" />
           </svg>
           React Demo
           <span class="text-blue-200 group-hover:translate-x-1 transition-transform">→</span>
         </a>
-        <a href="http://localhost:5174"
+        <a href="./vue/index.html"
           class="group w-full sm:w-auto px-8 py-4 rounded-xl bg-gradient-to-r from-emerald-500 to-teal-500 text-white font-semibold hover:opacity-90 transition-all flex items-center justify-center gap-3">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
+          <svg class="w-6 h-6 flex-shrink-0" viewBox="0 0 24 24" fill="currentColor">
             <path d="M2 3l10 18L22 3h-4l-6 10.5L6 3H2z" />
           </svg>
           Vue Demo
@@ -443,25 +439,28 @@
   <footer class="dark:border-white/5 border-gray-200 border-t py-12 px-6">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between gap-4">
       <div class="flex items-center gap-3">
-        <svg width="24" height="24" viewBox="0 0 40 40" fill="none">
-          <rect x="2" y="2" width="36" height="36" rx="10" stroke="url(#g2)" stroke-width="2" />
-          <circle cx="20" cy="20" r="6" fill="url(#g2)" />
+        <svg width="24" height="24" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
           <defs>
-            <linearGradient id="g2" x1="0" y1="0" x2="40" y2="40">
-              <stop stop-color="#10B981" />
-              <stop offset="1" stop-color="#3B82F6" />
+            <linearGradient id="gradCardFooter" x1="0%" y1="0%" x2="100%" y2="100%">
+              <stop offset="0%" stop-color="#10B981" />
+              <stop offset="100%" stop-color="#3B82F6" />
             </linearGradient>
           </defs>
+          <rect x="14" y="4" width="46" height="42" rx="6" fill="url(#gradCardFooter)" opacity="0.3" />
+          <rect x="4" y="14" width="46" height="42" rx="6" fill="url(#gradCardFooter)" />
+          <rect x="12" y="24" width="30" height="4" rx="2" fill="white" opacity="0.8" />
+          <rect x="12" y="33" width="22" height="4" rx="2" fill="white" opacity="0.6" />
+          <rect x="12" y="42" width="26" height="4" rx="2" fill="white" opacity="0.4" />
         </svg>
-        <span class="dark:text-gray-500 text-gray-400 text-sm">© 2024 AI Provider Selector</span>
+        <span class="dark:text-gray-500 text-gray-400 text-sm">© 2026 AI Selector</span>
       </div>
       <div class="flex items-center gap-6">
         <a href="https://github.com/peanut996/ai-provider-selector"
           class="dark:text-gray-500 text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">GitHub</a>
-        <a href="http://localhost:5173"
+        <a href="./react/index.html"
           class="dark:text-gray-500 text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">React
           Demo</a>
-        <a href="http://localhost:5174"
+        <a href="./vue/index.html"
           class="dark:text-gray-500 text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Vue
           Demo</a>
       </div>
