--- a/index.html
+++ b/index.html
@@ -152,9 +152,27 @@
         </span>
       </h1>
 
-      <p class="text-xl dark:text-gray-400 text-gray-500 max-w-2xl mx-auto mb-12 leading-relaxed">
-        开箱即用，内置 20+ 主流 AI 厂商配置可自定义扩展、模型列表智能管理、API Key 安全存储、连通性测试和配置持久化
+      <p class="text-xl dark:text-gray-300 text-gray-600 max-w-3xl mx-auto mb-8 leading-relaxed font-medium">
+        为你的应用一键接入 AI 配置能力，无需重复造轮子。
       </p>
+
+      <div class="flex flex-wrap justify-center gap-3 mb-12 max-w-3xl mx-auto">
+        <a href="#providers"
+          class="px-3 py-1 rounded-full dark:bg-white/5 bg-gray-100 dark:border-white/10 border-gray-200 border text-sm dark:text-gray-300 text-gray-600 hover:scale-105 transition-transform cursor-pointer">🚀
+          20+ 主流 AI 厂商</a>
+        <span
+          class="px-3 py-1 rounded-full dark:bg-white/5 bg-gray-100 dark:border-white/10 border-gray-200 border text-sm dark:text-gray-300 text-gray-600">⚡
+          模型自动刷新</span>
+        <span
+          class="px-3 py-1 rounded-full dark:bg-white/5 bg-gray-100 dark:border-white/10 border-gray-200 border text-sm dark:text-gray-300 text-gray-600">🔒
+          Key 安全存储</span>
+        <span
+          class="px-3 py-1 rounded-full dark:bg-white/5 bg-gray-100 dark:border-white/10 border-gray-200 border text-sm dark:text-gray-300 text-gray-600">💾
+          配置持久化</span>
+        <span
+          class="px-3 py-1 rounded-full dark:bg-white/5 bg-gray-100 dark:border-white/10 border-gray-200 border text-sm dark:text-gray-300 text-gray-600">🎨
+          支持深色模式</span>
+      </div>
 
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
         <a href="./react/index.html"
@@ -210,7 +228,7 @@
                   class="flex items-center justify-between p-3 rounded-lg dark:bg-white/5 bg-gray-50 dark:border-white/10 border-gray-200 border">
                   <div class="flex items-center gap-3">
                     <!-- OpenAI Icon -->
-                    <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
+                    <svg class="w-6 h-6 dark:text-white text-gray-900" viewBox="0 0 24 24" fill="currentColor">
                       <path
                         d="M22.282 9.821a5.985 5.985 0 0 0-.516-4.91 6.046 6.046 0 0 0-6.51-2.9A6.065 6.065 0 0 0 4.981 4.18a5.985 5.985 0 0 0-3.998 2.9 6.046 6.046 0 0 0 .743 7.097 5.98 5.98 0 0 0 .51 4.911 6.051 6.051 0 0 0 6.515 2.9A5.985 5.985 0 0 0 13.26 24a6.056 6.056 0 0 0 5.772-4.206 5.99 5.99 0 0 0 3.997-2.9 6.056 6.056 0 0 0-.747-7.073zM13.26 22.43a4.476 4.476 0 0 1-2.876-1.04l.141-.081 4.779-2.758a.795.795 0 0 0 .392-.681v-6.737l2.02 1.168a.071.071 0 0 1 .038.052v5.583a4.504 4.504 0 0 1-4.494 4.494zM3.6 18.304a4.47 4.47 0 0 1-.535-3.014l.142.085 4.783 2.759a.771.771 0 0 0 .78 0l5.843-3.369v2.332a.08.08 0 0 1-.033.062L9.74 19.95a4.5 4.5 0 0 1-6.14-1.646zM2.34 7.896a4.485 4.485 0 0 1 2.366-1.973V11.6a.766.766 0 0 0 .388.676l5.815 3.355-2.02 1.168a.076.076 0 0 1-.071 0l-4.83-2.786A4.504 4.504 0 0 1 2.34 7.896zm16.597 3.855l-5.833-3.387L15.119 7.2a.076.076 0 0 1 .071 0l4.83 2.791a4.494 4.494 0 0 1-.676 8.105v-5.678a.79.79 0 0 0-.407-.667zm2.01-3.023l-.141-.085-4.774-2.782a.776.776 0 0 0-.785 0L9.409 9.23V6.897a.066.066 0 0 1 .028-.061l4.83-2.787a4.5 4.5 0 0 1 6.68 4.66zm-12.64 4.135l-2.02-1.164a.08.08 0 0 1-.038-.057V6.075a4.5 4.5 0 0 1 7.375-3.453l-.142.08L8.704 5.46a.795.795 0 0 0-.393.681zm1.097-2.365l2.602-1.5 2.607 1.5v2.999l-2.597 1.5-2.607-1.5z" />
                     </svg>
@@ -397,7 +415,16 @@
           <div class="flex-1">
             <h4 class="font-semibold mb-3 dark:text-white text-gray-900">安装依赖</h4>
             <div class="code-block rounded-xl p-4 font-mono text-sm">
-              <span class="text-gray-500">$</span> <span class="text-emerald-400">npm</span> install @ai-selector/react
+              <div class="mb-2 text-gray-400">// React</div>
+              <div class="mb-4">
+                <span class="text-gray-500">$</span> <span class="text-emerald-400">npm</span> install
+                @tombcato/ai-selector-react
+              </div>
+              <div class="mb-2 text-gray-400">// Vue</div>
+              <div>
+                <span class="text-gray-500">$</span> <span class="text-emerald-400">npm</span> install
+                @tombcato/ai-selector-vue
+              </div>
             </div>
           </div>
         </div>
@@ -408,10 +435,24 @@
             class="w-10 h-10 rounded-full bg-gradient-to-br from-emerald-500 to-blue-500 flex items-center justify-center font-bold text-sm flex-shrink-0 text-white">
             2</div>
           <div class="flex-1">
-            <h4 class="font-semibold mb-3 dark:text-white text-gray-900">引入组件</h4>
+            <h4 class="font-semibold mb-3 dark:text-white text-gray-900">引入组件与样式</h4>
             <div class="code-block rounded-xl p-4 font-mono text-sm overflow-x-auto">
-              <span class="text-purple-400">import</span> { AIConfigForm } <span class="text-purple-400">from</span>
-              <span class="text-green-400">'@ai-selector/react'</span>;
+              <div class="mb-2 text-gray-400">// React</div>
+              <div class="mb-4">
+                <div><span class="text-purple-400">import</span> { AIConfigForm } <span
+                    class="text-purple-400">from</span> <span
+                    class="text-green-400">'@tombcato/ai-selector-react'</span>;</div>
+                <div><span class="text-purple-400">import</span> <span
+                    class="text-green-400">'@tombcato/ai-selector-react/dist/index.css'</span>;</div>
+              </div>
+              <div class="mb-2 text-gray-400">// Vue</div>
+              <div>
+                <div><span class="text-purple-400">import</span> { AIConfigForm } <span
+                    class="text-purple-400">from</span> <span class="text-green-400">'@tombcato/ai-selector-vue'</span>;
+                </div>
+                <div><span class="text-purple-400">import</span> <span
+                    class="text-green-400">'@tombcato/ai-selector-vue/dist/index.css'</span>;</div>
+              </div>
             </div>
           </div>
         </div>
@@ -422,12 +463,11 @@
             class="w-10 h-10 rounded-full bg-gradient-to-br from-emerald-500 to-blue-500 flex items-center justify-center font-bold text-sm flex-shrink-0 text-white">
             3</div>
           <div class="flex-1">
-            <h4 class="font-semibold mb-3 dark:text-white text-gray-900">使用组件</h4>
+            <h4 class="font-semibold mb-3 dark:text-white text-gray-900">使用组件 (直连模式)</h4>
             <div class="code-block rounded-xl p-4 font-mono text-sm overflow-x-auto">
               <pre><span class="text-blue-300">&lt;AIConfigForm</span>
-  <span class="text-orange-300">proxyUrl</span>=<span class="text-green-300">"http://localhost:8000"</span>
+  <span class="text-orange-300">proxyUrl</span>=<span class="text-green-300">""</span> <span class="text-gray-500">// 留空即开启直连模式</span>
   <span class="text-orange-300">onSave</span>={handleSave}
-  <span class="text-orange-300">showPreview</span>
 <span class="text-blue-300">/&gt;</span></pre>
             </div>
           </div>
