docs: add CDN usage, fix CSS import paths, update UMD output to .js

--- a/index.html
+++ b/index.html
@@ -458,6 +458,39 @@
           </div>
         </div>
 
+        <!-- CDN Alternative -->
+        <div class="flex gap-6 items-start">
+          <div
+            class="w-10 h-10 rounded-full bg-gradient-to-br from-gray-500 to-gray-600 flex items-center justify-center font-bold text-xs flex-shrink-0 text-white">
+            CDN</div>
+          <div class="flex-1">
+            <h4 class="font-semibold mb-3 dark:text-white text-gray-900" data-i18n="step_cdn_title">或使用 CDN</h4>
+            <div class="code-block rounded-xl p-4 font-mono text-sm overflow-x-auto">
+              <div class="mb-2 text-gray-400">&lt;!-- Vue --&gt;</div>
+              <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
+                  class="text-orange-300">src</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-vue/dist/index.umd.js"</span><span
+                  class="text-blue-300">&gt;&lt;/script&gt;</span></div>
+              <div class="mb-4"><span class="text-blue-300">&lt;link</span> <span
+                  class="text-orange-300">href</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-vue/dist/index.css"</span>
+                <span class="text-orange-300">rel</span>=<span class="text-green-300">"stylesheet"</span><span
+                  class="text-blue-300">&gt;</span>
+              </div>
+              <div class="mb-2 text-gray-400">&lt;!-- React --&gt;</div>
+              <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
+                  class="text-orange-300">src</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-react/dist/index.umd.js"</span><span
+                  class="text-blue-300">&gt;&lt;/script&gt;</span></div>
+              <div><span class="text-blue-300">&lt;link</span> <span class="text-orange-300">href</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-react/dist/index.css"</span>
+                <span class="text-orange-300">rel</span>=<span class="text-green-300">"stylesheet"</span><span
+                  class="text-blue-300">&gt;</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Step 2 -->
         <div class="flex gap-6 items-start">
           <div
@@ -472,7 +505,7 @@
                     class="text-purple-400">from</span> <span
                     class="text-green-400">'@tombcato/ai-selector-react'</span>;</div>
                 <div><span class="text-purple-400">import</span> <span
-                    class="text-green-400">'@tombcato/ai-selector-react/dist/index.css'</span>;</div>
+                    class="text-green-400">'@tombcato/ai-selector-react/style.css'</span>;</div>
               </div>
               <div class="mb-2 text-gray-400">// Vue</div>
               <div>
@@ -480,7 +513,7 @@
                     class="text-purple-400">from</span> <span class="text-green-400">'@tombcato/ai-selector-vue'</span>;
                 </div>
                 <div><span class="text-purple-400">import</span> <span
-                    class="text-green-400">'@tombcato/ai-selector-vue/dist/index.css'</span>;</div>
+                    class="text-green-400">'@tombcato/ai-selector-vue/style.css'</span>;</div>
               </div>
             </div>
           </div>
@@ -602,6 +635,7 @@
         usage_title: "快速开始",
         usage_desc: "三步完成接入",
         step_1_title: "安装依赖",
+        step_cdn_title: "或使用 CDN",
         step_2_title: "引入组件与样式",
         step_3_title: "使用组件 (直连模式)",
         footer_github: "GitHub",
@@ -657,6 +691,7 @@
         usage_title: "Quick Start",
         usage_desc: "Integrate in 3 steps",
         step_1_title: "Install Dependencies",
+        step_cdn_title: "Or Use CDN",
         step_2_title: "Import Component & Style",
         step_3_title: "Usage (Direct Connection)",
         footer_github: "GitHub",
