--- a/index.html
+++ b/index.html
@@ -469,6 +469,10 @@
               <div class="mb-2 text-gray-400">&lt;!-- Vue --&gt;</div>
               <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
                   class="text-orange-300">src</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-core/dist/index.umd.js"</span><span
+                  class="text-blue-300">&gt;&lt;/script&gt;</span></div>
+              <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
+                  class="text-orange-300">src</span>=<span class="text-orange-300">src</span>=<span
                   class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-vue/dist/index.umd.js"</span><span
                   class="text-blue-300">&gt;&lt;/script&gt;</span></div>
               <div class="mb-4"><span class="text-blue-300">&lt;link</span> <span
@@ -478,6 +482,10 @@
                   class="text-blue-300">&gt;</span>
               </div>
               <div class="mb-2 text-gray-400">&lt;!-- React --&gt;</div>
+              <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
+                  class="text-orange-300">src</span>=<span
+                  class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-core/dist/index.umd.js"</span><span
+                  class="text-blue-300">&gt;&lt;/script&gt;</span></div>
               <div class="mb-1"><span class="text-blue-300">&lt;script</span> <span
                   class="text-orange-300">src</span>=<span
                   class="text-green-300">"https://cdn.jsdelivr.net/npm/@tombcato/ai-selector-react/dist/index.umd.js"</span><span
