feat: v0.1.9 - AES encrypted storage, improved docs

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
     const ICON_BASE = 'https://registry.npmmirror.com/@lobehub/icons-static-svg/1.77.0/files/icons';
     const providers = [
       { name: 'OpenAI', icon: 'openai', baseUrl: 'api.openai.com/v1', format: 'openai', needsKey: true, modelsApi: true },
-      { name: 'Anthropic (Claude)', icon: 'anthropic', baseUrl: 'api.anthropic.com/v1', format: 'anthropic', needsKey: true, modelsApi: false },
+      { name: 'Anthropic (Claude)', icon: 'anthropic', baseUrl: 'api.anthropic.com/v1', format: 'anthropic', needsKey: true, modelsApi: true },
       { name: 'Google Gemini', icon: 'gemini', baseUrl: 'generativelanguage.googleapis.com/v1beta', format: 'gemini', needsKey: true, modelsApi: true },
       { name: 'OpenRouter', icon: 'openrouter', baseUrl: 'openrouter.ai/api/v1', format: 'openai', needsKey: true, modelsApi: true },
       { name: 'DeepSeek', icon: 'deepseek', baseUrl: 'api.deepseek.com', format: 'openai', needsKey: true, modelsApi: true },
